--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <span id="dataHolder" --data-ao3PlusExtensionLatestVersion="2.2.3"></span>
+    <span id="dataHolder" --data-ao3PlusExtensionLatestVersion="2.2.0"></span>
     <header class="header">
       <a href="#" class="firstLink">Home</a>
       <a href="#">Link name</a>
@@ -97,5 +97,6 @@
         <button type="button" id="accept-all">Accept All</button>
       </form>
     </div>
+    <script src="downloads.js"></script>
   </body>
 </html>
